[gd_scene load_steps=5 format=3 uid="uid://c3f5qw8j4x2vr"]

[ext_resource type="Script" path="res://scripts/enemies/Enemy.gd" id="1_3k8h2"]
[ext_resource type="Texture2D" uid="uid://bi5rqwpixjmwo" path="res://assets/characters/32rogues/32rogues/rogues.png" id="2_5r8cg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 120.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 40.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_3k8h2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5r8cg")
hframes = 8
vframes = 8
frame = 56

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -20.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="AttackShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_2")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="HurtShape" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_1")

[node name="StateLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 8.0
offset_right = 20.0
offset_bottom = 15.0
text = "IDLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioManager" type="Node" parent="."]

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="AudioManager"]

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="AudioManager"]

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="AudioManager"] 